# mcp-chatbot-spring-python

./: README.md  pom.xml  tools.json
mcp-client/: pom.xml
mcp-client/src/main/java/net/fatima/mcpclient/: McpClientApplication.java
mcp-client/src/main/java/net/fatima/mcpclient/Controllers/: AIRestController.java
mcp-client/src/main/java/net/fatima/mcpclient/agent/: AIAgent.java
mcp-client/src/main/resources/: application.properties  mcp-servers.json
mcp-client/src/test/java/net/fatima/mcpclient/: McpClientApplicationTests.java
mcp-server1/: pom.xml
mcp-server1/src/main/java/net/fatima/mcpserver1/: McpServer1Application.java
mcp-server1/src/main/java/net/fatima/mcpserver1/tools/: StockTools.java
mcp-server1/src/main/resources/: application.properties
mcp-server1/src/test/java/net/fatima/mcpserver1/: McpServer1ApplicationTests.java
python-mcp-server/: pyproject.toml  server.py
src/main/java/net/fatima/: Main.java
