[project]
name = "fatima"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "FATIMA AIT LAMINE", email = "fatima.aitlamine03@gmail.com"},
]
dependencies = ["requests>=2.32.4", "flask>=3.1.1", "openai>=1.95.0", "mcp[cli]>=1.11.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
